--- a/TextPad/MainForm.xaml
+++ b/TextPad/MainForm.xaml
@@ -22,7 +22,7 @@
                     <ColumnDefinition Width="3"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="TB_Window" Text="{Binding Path=stringCode, Mode=OneTime}" Grid.Column="3" Margin="0" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" AcceptsTab="True" IsEnabled="True"/>
+                <TextBox x:Name="TB_Window" Text="{Binding Path=StringCode, Mode=OneWay}" Grid.Column="3" Margin="0" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" AcceptsTab="True" IsEnabled="True"/>
                 <TextBlock x:Name="TB_StringNumber" Grid.Column="1" Margin="0" TextWrapping="Wrap" Padding="0" FlowDirection="RightToLeft"/>
             </Grid>
         </DataTemplate>
